--- a/style.css
+++ b/style.css
@@ -2,3 +2,14 @@ body {margin:0 auto;
     color:#fff;
 }
 
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* background-color: rgb(51, 51, 51); */
+    background: radial-gradient(circle, #217c89, #165e69, #0d434b, #06262b);
+    padding: 5px 50px;
+    }
+    .couleur {
+    color: #217c89;
+    }
